--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@ header {
     background-image: url("../img/pattern.png");
     background-color: #4da2ff;
     background-size: contain;
+    
 }
+
 
 /* logo size */
 #logo {
@@ -45,6 +47,10 @@ h5 {
 
 .corpo{
     padding-right: 40%;
+}
+
+ul{
+padding-left: 2%;
 }
 
 /* tabella */
